[gd_scene load_steps=7 format=3 uid="uid://lrtmlf51dcrh"]

[ext_resource type="Script" path="res://UI/Level/bottom_items.gd" id="1_dkika"]
[ext_resource type="Texture2D" uid="uid://bvhirbbofu47r" path="res://icon.svg" id="2_civ6s"]

[sub_resource type="InputEventKey" id="InputEventKey_3pdhh"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_yvsif"]
events = [SubResource("InputEventKey_3pdhh")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_52w2v"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqis1"]
content_margin_left = 30.0
content_margin_top = 10.0
content_margin_right = 30.0
content_margin_bottom = 10.0
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.117647, 0.117647, 0.117647, 0.819608)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="BottomItems" type="CanvasLayer"]
script = ExtResource("1_dkika")

[node name="BottomItems" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -176.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="Control" type="Control" parent="BottomItems"]
layout_mode = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BottomItems/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BottomItems/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="PlayButton" type="Button" parent="BottomItems/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
shortcut = SubResource("Shortcut_yvsif")
icon = ExtResource("2_civ6s")
icon_alignment = 1

[node name="LevelText" type="RichTextLabel" parent="BottomItems/Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 32
theme_override_styles/background = SubResource("StyleBoxFlat_52w2v")
theme_override_styles/normal = SubResource("StyleBoxFlat_hqis1")
text = "Mande os numeros para a esteira de saida."
fit_content = true
scroll_active = false

[connection signal="mouse_entered" from="BottomItems/Control" to="." method="_on_hover_detect_mouse_entered"]
[connection signal="mouse_exited" from="BottomItems/Control" to="." method="_on_hover_detect_mouse_exited"]
[connection signal="pressed" from="BottomItems/Control/HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
